--- a/deploy/charts/klicker-uzh-v2/templates/service-app.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/service-app.yaml
@@ -14,3 +14,20 @@ spec:
   selector:
     {{- include "chart.selectorLabels" . | nindent 4 }}
     app.kubernetes.io/component: frontend-pwa
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "chart.fullname" . }}-frontend-manage
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.frontendManage.service.type }}
+  ports:
+    - port: {{ .Values.frontendManage.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    {{- include "chart.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: frontend-manage
