--- a/apps/frontend-manage/.env.development
+++ b/apps/frontend-manage/.env.development
@@ -1,4 +1,6 @@
 COOKIE_DOMAIN=127.0.0.1
 API_DOMAIN=$COOKIE_DOMAIN
+S3_PATHNAME="/klicker-uzh-dev/**"
+S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_API_URL="http://127.0.0.1:7071/api/graphql"
