--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -12,24 +12,40 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-regular-svg-icons": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
+    "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.38",
     "deepmerge": "4.2.2",
+    "formik": "2.2.9",
     "graphql": "16.6.0",
+    "localforage": "1.10.0",
     "next": "12.3.0",
+    "nookies": "2.5.2",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qrcode-logo": "2.8.0",
-    "tailwind-merge": "1.6.0"
+    "sharp": "0.31.0",
+    "tailwind-merge": "1.6.0",
+    "yup": "0.32.11"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.7",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/sharp": "^0.30.5",
     "autoprefixer": "10.4.10",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
@@ -37,6 +53,7 @@
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
     "tailwindcss": "3.1.8",
+    "tailwindcss-radix": "2.6.0",
     "typescript": "4.8.3"
   },
   "volta": {
