--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -32,6 +32,7 @@
     "graphql": "16.6.0",
     "localforage": "1.10.0",
     "next": "12.3.0",
+    "next-ims-lti": "0.1.2",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "object-hash": "3.0.0",
