--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -3,6 +3,6 @@ API_DOMAIN=$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
-NEXT_PUBLIC_AVATAR_BASE_PATH="http://127.0.0.1:3001/avatars/"
+NEXT_PUBLIC_AVATAR_BASE_PATH="http://127.0.0.1:3001/avatars"
 NEXT_PUBLIC_ADD_RESPONSE_URL="http://127.0.0.1:7072/api/AddResponse"
 NEXT_PUBLIC_API_URL="http://127.0.0.1:7071/api/graphql"
