feat: add cockpit lecturer view for running session including db interactions (#2879)
Co-authored-by: Roland Schlaefli <rolandschlaefli@gmail.com>

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -20,16 +20,20 @@
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@radix-ui/react-tooltip": "1.0.0",
     "@socialgouv/matomo-next": "1.4.0",
-    "@uzh-bf/design-system": "0.0.38",
+    "@uzh-bf/design-system": "0.0.39",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
+    "js-search": "2.0.0",
     "localforage": "1.10.0",
     "next": "12.3.0",
     "nookies": "2.5.2",
     "ramda": "0.28.0",
     "react": "18.2.0",
+    "react-csv": "2.2.2",
+    "react-d3-speedometer": "2.0.0-rc.3",
     "react-dom": "18.2.0",
     "react-qrcode-logo": "2.8.0",
     "sharp": "0.31.0",
@@ -37,6 +41,7 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
+    "@types/js-search": "1.4.0",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
