chore: imported components from legacy version with minor adaptions

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "1.0.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.39",
+    "d3": "7.6.1",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
@@ -36,16 +37,18 @@
     "react-d3-speedometer": "2.0.0-rc.3",
     "react-dom": "18.2.0",
     "react-qrcode-logo": "2.8.0",
+    "react-tagcloud": "2.3.1",
+    "recharts": "2.1.14",
     "sharp": "0.31.0",
     "tailwind-merge": "1.6.0",
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@types/js-search": "1.4.0",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.7",
+    "@types/js-search": "1.4.0",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
