--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -37,6 +37,7 @@
     "react-d3-speedometer": "2.0.0-rc.3",
     "react-dom": "18.2.0",
     "react-qrcode-logo": "2.8.0",
+    "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
     "recharts": "2.1.14",
     "sharp": "0.31.0",
