fix(apps/frontend-pwa): add vapid public key to env

--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -6,3 +6,4 @@ S3_HOSTNAME="sos-ch-dk-2.exo.io"
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.klicker-qa.bf-app.ch/api/AddResponse"
 NEXT_PUBLIC_API_URL="https://backend-sls.klicker-qa.bf-app.ch/api/graphql"
+NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BFTs2KshUdSwCqQgZzaaCZK7h3L4pd8hjJoLk1jv1-iPN9c-_7JdLkQi5IV_k3Ml4rrx12HOkcANwVk39L_RTOM"
