--- a/apps/frontend-manage/.env.production
+++ b/apps/frontend-manage/.env.production
@@ -1,6 +1,6 @@
-COOKIE_DOMAIN=klicker-qa.bf-app.ch
+COOKIE_DOMAIN=klicker-prod.bf-app.ch
 API_DOMAIN=backend-sls.$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
-NEXT_PUBLIC_API_URL="https://backend-sls.klicker-qa.bf-app.ch/api/graphql"
+NEXT_PUBLIC_API_URL="https://backend-sls.klicker-prod.bf-app.ch/api/graphql"
