deploy: ensure that .env.qa in frontend-manage build action is renamed correctly

--- a/.github/workflows/v2_frontend-manage-docker-qa.yml
+++ b/.github/workflows/v2_frontend-manage-docker-qa.yml
@@ -31,7 +31,7 @@ jobs:
         shell: bash
         run: |
           rm apps/frontend-manage/.env.production
-          mv apps/frontend-manage/.env.qa apps/frontend-pwa/.env.production
+          mv apps/frontend-manage/.env.qa apps/frontend-manage/.env.production
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
