--- a/.github/workflows/v2_frontend-pwa.yml
+++ b/.github/workflows/v2_frontend-pwa.yml
@@ -6,6 +6,7 @@ on:
       - v2
     paths:
       - "apps/frontend-pwa/**"
+      - ".github/workflows/v2_frontend-pwa**"
   workflow_dispatch:
 
 env:
