Update assets to new logo

--- a/apps/frontend-pwa/public/manifest.json
+++ b/apps/frontend-pwa/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "theme_color": "#3353b7",
-  "background_color": "#99a9db",
+  "background_color": "#ffffff",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
