enhance: add JWT-based verification on LTI registration endpoint

--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -7,3 +7,5 @@ NEXT_PUBLIC_AVATAR_BASE_PATH="http://127.0.0.1:3001/avatars"
 NEXT_PUBLIC_ADD_RESPONSE_URL="http://127.0.0.1:7072/api/AddResponse"
 NEXT_PUBLIC_API_URL="http://127.0.0.1:7071/api/graphql"
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BFTs2KshUdSwCqQgZzaaCZK7h3L4pd8hjJoLk1jv1-iPN9c-_7JdLkQi5IV_k3Ml4rrx12HOkcANwVk39L_RTOM"
+
+APP_SECRET=abcd
