--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -30,6 +30,7 @@
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
+    "jsonwebtoken": "8.5.1",
     "localforage": "1.10.0",
     "next": "12.3.0",
     "next-pwa": "5.6.0",
@@ -48,6 +49,7 @@
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.7",
     "@types/body-parser": "^1.19.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.0",
     "@types/object-hash": "2.2.1",
     "@types/ramda": "^0.28.15",
