--- a/deploy/env-prod-v2/helmfile.yaml
+++ b/deploy/env-prod-v2/helmfile.yaml
@@ -9,6 +9,7 @@ releases:
     values:
       - values.yaml
       - frontendPWA:
+          appSecret: '{{ requiredEnv "APP_SECRET" }}'
           image:
             tag: v2.0.0-alpha.30
         frontendManage:
