--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -20,6 +20,7 @@
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "1.0.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.43",
@@ -41,11 +42,11 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@types/js-search": "1.4.0",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.7",
+    "@types/js-search": "1.4.0",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
