deploy(apps/backend-docker): extend chart for v2 deployment with doppler-based config

--- a/deploy/charts/klicker-uzh-v2/templates/secret-frontend-pwa.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-frontend-pwa.yaml
@@ -6,4 +6,4 @@ metadata:
     {{- include "chart.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  APP_SECRET: {{ .Values.frontendPWA.appSecret | quote }}
+  APP_SECRET: {{ .Values.appSecret | quote }}
