--- a/deploy/env-prod-v2/values.yaml
+++ b/deploy/env-prod-v2/values.yaml
@@ -1,3 +1,5 @@
+nodeEnv: production
+
 frontendPWA:
   autoscaling:
     enabled: false
@@ -44,6 +46,31 @@ frontendManage:
       - secretName: klicker-prod-frontend-manage-tls
         hosts:
           - manage.klicker-prod.bf-app.ch
+
+  strategy:
+    type: RollingUpdate
+
+backendGraphql:
+  autoscaling:
+    enabled: false
+
+  ingress:
+    hosts:
+      - host: backend-sls.klicker.uzh.ch
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+      - host: backend-sls.klicker-prod.bf-app.ch
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls:
+      - secretName: klicker-prod-backend-graphql-tls-uzh
+        hosts:
+          - backend-sls.klicker.uzh.ch
+      - secretName: klicker-prod-backend-graphql-tls
+        hosts:
+          - backend-sls.klicker-prod.bf-app.ch
 
   strategy:
     type: RollingUpdate
