--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -8,8 +8,10 @@
     "dist"
   ],
   "scripts": {
+    "dev": "npm-run-all --parallel dev:build dev:run",
+    "dev:build": "NODE_ENV=development tsup --watch",
+    "dev:run": "nodemon -w dist/ --exec 'NODE_ENV=development node -r dotenv/config dist/index.js'",
     "build": "NODE_ENV=production tsup",
-    "build:watch": "NODE_ENV=development tsup --watch",
     "format": "prettier --write ."
   },
   "engines": {
@@ -22,9 +24,9 @@
     }
   ],
   "devDependencies": {
+    "@graphql-hive/cli": "0.19.0",
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
-    "@graphql-hive/cli": "0.19.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/ioredis-mock": "^5.6.0",
@@ -40,6 +42,7 @@
     "husky": "8.0.1",
     "ioredis-mock": "8.2.2",
     "jest": "29.0.3",
+    "nodemon": "2.0.20",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
