chore: move seeding to the prisma package

--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -3,5 +3,11 @@
   "include": ["src"],
   "compilerOptions": {
     "module": "ESNext"
+  },
+  "ts-node": {
+    "transpileOnly": true,
+    "moduleTypes": {
+      "src/seed/*": "esm"
+    }
   }
 }
