--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:build dev:run",
     "dev:build": "NODE_ENV=development tsup --watch",
-    "dev:run": "nodemon -w dist/ --exec 'NODE_ENV=development node -r dotenv/config dist/index.js'",
+    "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'NODE_ENV=development node -r dotenv/config dist/index.js'",
     "build": "NODE_ENV=production tsup",
     "format": "prettier --write ."
   },
