--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+  frontend-pwa:
+    profiles:
+      - full
+    build: apps/frontend-pwa
+    environment:
+      APP_SECRET: abcdabcdabcd
+    ports:
+      - 3001:3000
+
+  frontend-manage:
+    profiles:
+      - full
+    build: apps/frontend-manage
+    ports:
+      - 3002:3000
+
   backend:
     profiles:
       - full
