--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,44 @@ services:
   frontend-pwa:
     profiles:
       - full
-    build: apps/frontend-pwa
+    build:
+      context: apps/frontend-pwa
+      args:
+        NODE_ENV: development
+        COOKIE_DOMAIN: 127.0.0.1
+        NEXT_PUBLIC_ADD_RESPONSE_URL: 'http://127.0.0.1:7072/api/AddResponse'
+        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
     environment:
-      APP_SECRET: abcdabcdabcd
+      APP_SECRET: abcd
     ports:
       - 3001:3000
+    networks:
+      - klicker-dev
 
   frontend-manage:
     profiles:
       - full
-    build: apps/frontend-manage
+    build:
+      context: apps/frontend-manage
+      args:
+        NODE_ENV: development
+        COOKIE_DOMAIN: 127.0.0.1
+        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
     ports:
       - 3002:3000
+    networks:
+      - klicker-dev
 
   backend:
     profiles:
       - full
-    build: apps/backend-docker
+    build:
+      context: apps/backend-docker
+      args:
+        NODE_ENV: 'development'
     environment:
-      NODE_ENV: 'development'
       DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/main'
       APP_SECRET: 'abcd'
       REDIS_HOST: 'redis_exec'
