--- a/apps/frontend-manage/.env.qa
+++ b/apps/frontend-manage/.env.qa
@@ -4,3 +4,4 @@ S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_API_URL="https://backend-sls.klicker-qa.bf-app.ch/api/graphql"
+NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-qa-klicker-uzh-v2-backend-graphql:3000/api/graphql"
