fix(apps/backend-docker): evaluate ARG ENV approach for NODE_ENV

--- a/apps/backend-docker/Dockerfile
+++ b/apps/backend-docker/Dockerfile
@@ -17,6 +17,7 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 ARG NODE_ENV production
+ENV NODE_ENV $NODE_ENV
 
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
@@ -30,6 +31,7 @@ FROM node:18-alpine AS runner
 WORKDIR /app
 
 ARG NODE_ENV production
+ENV NODE_ENV $NODE_ENV
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nodejs
