enhance: quick wins and sorting of leaderboard

--- a/deploy/charts/klicker-uzh-v2/templates/deployment-app.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/deployment-app.yaml
@@ -189,6 +189,9 @@ spec:
             - name: http
               containerPort: 3000
               protocol: TCP
+          env:
+            - name: NODE_ENV
+              value: production
           envFrom:
             - configMapRef:
                 name: {{ include "chart.fullname" . }}-config-backend-graphql
