--- a/deploy/charts/klicker-uzh-v2/Chart.yaml
+++ b/deploy/charts/klicker-uzh-v2/Chart.yaml
@@ -3,5 +3,5 @@ name: klicker-uzh-v2
 description: A Helm chart for the KlickerUZH
 type: application
 version: 2.0.0-alpha.22
-appVersion: 2.0.0-alpha.22
+appVersion: v2
 dependencies: []
