--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -53,6 +53,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/validator": "^13.7.5",
+    "@types/web-push": "^3.3.2",
+    "dotenv": "16.0.2",
     "husky": "8.0.1",
     "ioredis": "5.2.3",
     "jest": "29.0.3",
@@ -61,12 +63,12 @@
     "prettier-plugin-organize-imports": "3.1.1",
     "size-limit": "8.1.0",
     "tsup": "6.2.3",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "web-push": "3.5.0"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.5",
-    "dotenv": "16.0.2",
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-scalars": "1.18.0",
