--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -3,5 +3,11 @@
   "include": ["src"],
   "compilerOptions": {
     "module": "ESNext"
+  },
+  "ts-node": {
+    "transpileOnly": true,
+    "moduleTypes": {
+      "src/lib/push.ts": "esm"
+    }
   }
 }
