--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/graphql",
-  "version": "2.0.0-alpha.48",
+  "version": "2.0.0-alpha.49",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,7 +12,7 @@
     "build:all": "npm-run-all generate build build:hive",
     "build": "NODE_ENV=production tsup --dts",
     "build:hive": "hive schema:publish src/graphql/schema.graphql",
-    "build:watch": "NODE_ENV=development tsup --watch --dts",
+    "dev": "NODE_ENV=development tsup --watch --dts",
     "format": "prettier --write .",
     "generate": "npm-run-all generate:nexus generate:graphql",
     "generate:graphql": "graphql-codegen --config codegen.yml",
