--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -52,6 +52,7 @@
     "typescript": "4.8.3"
   },
   "dependencies": {
+    "@envelop/core": "1.7.1",
     "@envelop/parser-cache": "4.7.0",
     "@envelop/response-cache": "3.2.0",
     "@envelop/response-cache-redis": "1.2.0",
@@ -74,6 +75,6 @@
     "extends": "../../package.json"
   },
   "overrides": {
-    "@envelop/core": "^2.5.0"
+    "@envelop/core": "^2.6.0"
   }
 }
