deploy: update chart for redis and sentry

--- a/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
@@ -16,3 +16,12 @@ data:
   REDIS_HOST: {{ .Values.backendGraphql.redisExec.host | quote }}
   REDIS_PORT: {{ .Values.backendGraphql.redisExec.port | quote }}
   REDIS_TLS: {{ .Values.backendGraphql.redisExec.tls | quote }}
+  {{- if .Values.backendGraphql.sentryDSN }}
+  SENTRY_DSN: {{ .Values.backendGraphql.sentryDSN | quote }}
+  {{ end }}
+  {{- if .Values.backendGraphql.sentryEnv }}
+  SENTRY_ENVIRONMENT: {{ .Values.backendGraphql.sentryEnv | quote }}
+  {{ end }}
+  {{- if .Values.backendGraphql.sentryRelease }}
+  SENTRY_RELEASE: {{ .Values.backendGraphql.sentryRelease | quote }}
+  {{ end }}
