wip: added structure and dummy data for evaluation, add bar chart for SC, MC and KRPIM questions

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "1.0.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.43",
+    "d3": "7.6.1",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
@@ -37,6 +38,9 @@
     "react-d3-speedometer": "2.0.0-rc.3",
     "react-dom": "18.2.0",
     "react-qrcode-logo": "2.8.0",
+    "react-sizeme": "3.0.2",
+    "react-tagcloud": "2.3.1",
+    "recharts": "2.1.12",
     "sharp": "0.31.0",
     "tailwind-merge": "1.6.0",
     "yup": "0.32.11"
@@ -51,6 +55,7 @@
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-tagcloud": "^1.1.7",
     "@types/sharp": "^0.30.5",
     "autoprefixer": "10.4.10",
     "eslint": "8.23.1",
