--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -50,6 +50,7 @@
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.7",
+    "@types/d3": "^7.4.0",
     "@types/js-search": "1.4.0",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
