--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -30,6 +30,7 @@
     "graphql": "16.6.0",
     "js-search": "2.0.0",
     "localforage": "1.10.0",
+    "lodash": "4.17.21",
     "next": "12.3.0",
     "nookies": "2.5.2",
     "ramda": "0.28.0",
@@ -52,6 +53,7 @@
     "@tailwindcss/typography": "0.5.7",
     "@types/d3": "^7.4.0",
     "@types/js-search": "1.4.0",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
