--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -20,14 +20,17 @@
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "1.0.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.43",
+    "d3": "7.6.1",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
     "js-search": "2.0.0",
     "localforage": "1.10.0",
+    "lodash": "4.17.21",
     "next": "12.3.0",
     "nookies": "2.5.2",
     "ramda": "0.28.0",
@@ -36,20 +39,26 @@
     "react-d3-speedometer": "2.0.0-rc.3",
     "react-dom": "18.2.0",
     "react-qrcode-logo": "2.8.0",
+    "react-sizeme": "3.0.2",
+    "react-tagcloud": "2.3.1",
+    "recharts": "2.1.12",
     "sharp": "0.31.0",
     "tailwind-merge": "1.6.0",
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@types/js-search": "1.4.0",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.7",
+    "@types/d3": "^7.4.0",
+    "@types/js-search": "1.4.0",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-tagcloud": "^1.1.7",
     "@types/sharp": "^0.30.5",
     "autoprefixer": "10.4.10",
     "eslint": "8.23.1",
