--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -34,7 +34,8 @@
   ],
   "peerDependencies": {
     "@klicker-uzh/grading": "^2.0.0-alpha.0",
-    "@klicker-uzh/prisma": "^2.0.0-alpha.0"
+    "@klicker-uzh/prisma": "^2.0.0-alpha.0",
+    "@graphql-yoga/node": "^2.13.13"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.12.0",
