--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -28,6 +28,7 @@
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ioredis-mock": "^5.6.0",
     "@types/jest": "^29.0.0",
@@ -67,6 +68,7 @@
     "@sentry/node": "7.13.0",
     "@sentry/tracing": "7.13.0",
     "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
     "express": "4.18.1",
     "graphql": "16.6.0",
     "ioredis": "5.2.3",
