--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -21,9 +21,11 @@
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
     "prisma:reset": "prisma reset --schema=src/prisma/schema.prisma",
     "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
-    "seed:test": "ts-node --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
-    "seed:bf1": "ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
-    "seed:ami": "ts-node --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
+    "seed:test": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
+    "seed:bf1": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
+    "seed:ami": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
+    "seed:prod:bf1": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
+    "seed:prod:ami": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
     "size": "size-limit"
   },
   "engines": {
