deploy: use app version for sentry release, add DEBUG env value for backend

--- a/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
@@ -18,10 +18,11 @@ data:
   REDIS_TLS: {{ .Values.backendGraphql.redisExec.tls | quote }}
   {{- if .Values.backendGraphql.sentryDSN }}
   SENTRY_DSN: {{ .Values.backendGraphql.sentryDSN | quote }}
+  SENTRY_RELEASE: {{ .Chart.AppVersion | quote }}
   {{ end }}
   {{- if .Values.backendGraphql.sentryEnv }}
   SENTRY_ENVIRONMENT: {{ .Values.backendGraphql.sentryEnv | quote }}
   {{ end }}
-  {{- if .Values.backendGraphql.sentryRelease }}
-  SENTRY_RELEASE: {{ .Values.backendGraphql.sentryRelease | quote }}
+  {{- if .Values.backendGraphql.debug }}
+  DEBUG: {{ .Values.backendGraphql.debug | quote }}
   {{ end }}
