--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -71,10 +71,12 @@
     "cors": "2.8.5",
     "express": "4.18.1",
     "graphql": "16.6.0",
+    "graphql-ws": "5.11.2",
     "ioredis": "5.2.3",
     "jsonwebtoken": "8.5.1",
     "passport": "0.6.0",
-    "passport-jwt": "4.0.0"
+    "passport-jwt": "4.0.0",
+    "ws": "8.9.0"
   },
   "volta": {
     "extends": "../../package.json"
