--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -30,6 +30,7 @@
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
+    "graphql-ws": "5.11.2",
     "jsonwebtoken": "8.5.1",
     "localforage": "1.10.0",
     "next": "12.3.1",
