--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -38,6 +38,8 @@
     "react": "18.2.0",
     "react-csv": "2.2.2",
     "react-d3-speedometer": "2.0.0-rc.3",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.2.0",
     "react-qrcode-logo": "2.8.0",
     "react-sizeme": "3.0.2",
