--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -23,6 +23,7 @@
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-toggle": "1.0.0",
+    "@sentry/nextjs": "7.13.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.43",
     "body-parser": "1.20.0",
